--- a/styles/styles.css
+++ b/styles/styles.css
@@ -189,12 +189,17 @@ main img {
 
 /* sections */
 main .section {
-  padding: 64px 16px;
+ padding: 0 16px;
+ background-color: grey;
+}
+
+main .section:nth-child(odd) {
+  background-color: white;
 }
 
 @media (width >= 600px) {
   main .section {
-    padding: 64px 32px;
+    padding: 0 32px;
   }
 }
 
