--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -173,6 +173,7 @@ header nav .nav-sections ul  {
   padding-left: 0;
   font-size: var(--body-font-size-s);
   font-weight: 500;
+  color: var(--background-color);
 }
 
 header nav .nav-sections ul > li {
@@ -181,6 +182,7 @@ header nav .nav-sections ul > li {
 
 header nav .nav-sections ul > li > ul {
   margin-top: 0;
+  color: black;
 }
 
 header nav .nav-sections ul > li > ul > li {
