switch section bg color ordering

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -190,16 +190,18 @@ main img {
 /* sections */
 main .section {
  padding: 0 16px;
- background-color: grey;
+ background-color: white;
+ padding: 10px;
 }
 
-main .section:nth-child(odd) {
-  background-color: white;
+main .section:nth-child(even) {
+  background-color: grey;
+  padding: 10px;
 }
 
 @media (width >= 600px) {
   main .section {
-    padding: 0 32px;
+    padding: 10px 32px;
   }
 }
 
